@@ -11,8 +11,8 @@ import waflib.extras.autowaf as autowaf
 # major increment <=> incompatible changes
 # minor increment <=> compatible changes (additions)
 # micro increment <=> no interface changes
-SERD_VERSION       = '0.23.0'
-SERD_MAJOR_VERSION = '0'
+SERD_VERSION       = '1.0.0'
+SERD_MAJOR_VERSION = '1'
 
 # Mandatory waf variables
 APPNAME = 'serd'        # Package name for waf dist
