@@ -1,5 +1,6 @@
-serd (0.23.0) unstable;
+serd (1.0.0) unstable;
 
+  * Use SerdBuffer for mutable buffers instead of abusing SerdChunk
   * Add serd_node_new_relative_uri()
   * Fix construction and comparison of URIs with UTF-8 characters
   * Report I/O errors with message and return appropriate status code
